--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
 <body>
 
   <section id="banner">
-    <div class="embed embed-3by2 relative container">
-      <img class="img-flex embed-item" src="images/earth-horizon.jpg" alt="">
-      <div class="grid wrapper absolute pin-bc grid-middle gutter content w-h-1">
-        <div class="unit [ xs-1 s-1-2 m-1-2 l-1-2 ] text">
-          <h1>The Planet Earth</h1>
-          <p>An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
-        </div>
-        <div class="unit [ xs-1 s-1-2 m-1-2 l-1-2 ] text-center button">
-          <a class="btn btn-ghost" href="#">Book a star cruise</a>
+    <div class="container">
+      <img class="img-flex img" src="images/earth-horizon.jpg" alt="">
+      <div class="content w-1">
+        <div class="grid wrapper grid-middle gutter-1-2 pad-t pad-b">
+          <div class="unit [ xs-1 s-1 m-1-2 l-1-2 ] text">
+            <h1 class="nina push-1-2">The Planet Earth</h1>
+            <p class="max-lenght">An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
+          </div>
+          <div class="unit [ xs-1 s-1 m-1-2 l-1-2 ] button">
+            <a class="btn btn-ghost bold" href="#">Book a star cruise</a>
+          </div>
         </div>
       </div>
     </div>
+
   </section>
 
 </body>
