Add a tag to image HTML

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 
   <section id="banner">
     <div class="container">
-      <img class="img-flex img" src="images/earth-horizon.jpg" alt="">
+      <div class="img">
+        <img class="img-flex" src="images/earth-horizon.jpg" alt="">
+      </div>
       <div class="content w-1">
         <div class="grid wrapper grid-middle gutter-1-2 pad-t pad-b">
           <div class="unit [ xs-1 s-1 m-1-2 l-1-2 ] text">
-            <h1 class="nina push-1-2">The Planet Earth</h1>
+            <h1 class="yotta push-0">The Planet Earth</h1>
             <p class="max-lenght">An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-2 ] button">
